cmake_minimum_required(VERSION 3.13)
project(Yuqing_LC)

set(CMAKE_CXX_STANDARD 11)

add_executable(Yuqing_LC main.cpp)
add_executable(5 "5. Longest Palindromic Substring.cpp" "26. Remove Duplicates from Sorted Array.cpp" "27. Remove Element.cpp")
add_executable(6 "6. ZigZag Conversion.cpp")
add_executable(7  "7. Reverse Integer.cpp")